--- a/Joueur.cs.csproj
+++ b/Joueur.cs.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -76,7 +76,21 @@
     <Compile Include="Joueur\ServerMessages\OverData.cs" />
     <Compile Include="Main.cs" />
     <!-- This tells Visual Studio to grab all the game directories (and thier files) inside the Games/ folder. If you do anything to force Visual Studio to update this csproj it will probably overwrite this with the actual directories, breaking forward compatibility with new games. You are advised to review your comits to make sure this line stays -->
-    <Compile Include="Games\**" />
+    <Compile Include="Games\Stumped\AI.cs" />
+    <Compile Include="Games\Stumped\AStar.cs" />
+    <Compile Include="Games\Stumped\Beaver.cs" />
+    <Compile Include="Games\Stumped\Delegates.cs" />
+    <Compile Include="Games\Stumped\Extensions.cs" />
+    <Compile Include="Games\Stumped\Game.cs" />
+    <Compile Include="Games\Stumped\GameObject.cs" />
+    <Compile Include="Games\Stumped\Job.cs" />
+    <Compile Include="Games\Stumped\LazyList.cs" />
+    <Compile Include="Games\Stumped\LRUCache.cs" />
+    <Compile Include="Games\Stumped\Player.cs" />
+    <Compile Include="Games\Stumped\Point.cs" />
+    <Compile Include="Games\Stumped\Solver.cs" />
+    <Compile Include="Games\Stumped\Spawner.cs" />
+    <Compile Include="Games\Stumped\Tile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Joueur\ServerMessages\LobbiedData.cs" />
     <Compile Include="Joueur\ServerMessages\OrderData.cs" />
